fix body shifting when Modal is rendered, add control state of WorcCloud component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,9 @@
-html, body, #root {
-    height: 98%;
-    width: 98%
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0px;
+}
+
+#root {
+    height: 100%;
 }
